# lobemap

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  __init__.py  __main__.py  lobemap  lobemap.py  paper_pdf_sources.csv  pyproject.toml
.github/workflows/: publish-to-pypi.yml
banc/: README.md  banc_napari.py
banc/data/source/: banc_neuroglancer_states.csv  banc_resources.csv
banc/scripts/: download_banc_resources.py
bates-schlegel-2020/: README.md  bates_schlegel_napari.py
bates-schlegel-2020/scripts/: slice_glomeruli_atlas.py
benton-2025/: README.md  benton_2025_data.py  benton_2025_napari.py
benton-2025/data/source/: 44319_2025_476_MOESM2_ESM.xlsx  manifest.csv
comparative-atlases/: README.md
comparative-atlases/data/source/: bactrocera_dorsalis_al_2018.html  drosophila_suzukii_melanogaster_al_2025.html
docs/: data-sources.md  usage.md
door/: README.md  door_napari.py
door/data/source/: door_al_map_glomeruli.csv  door_al_map_labels.csv  door_data_format.csv  door_export_versions.txt
door/scripts/: export_door_resources.R
edmond-fibsem/: README.md
edmond-fibsem/data/source/: VII_DA2_rAl.yaml  X_DA2_rAl.yaml  X_DL5_lAl.yaml  (+1 more)
flywire/: README.md  flywire_napari.py
flywire-codex/: README.md
flywire/scripts/: download_fbbt_glomerulus_terms.py  export_flywire_glomeruli_from_neurons.py  export_flywire_neuropils.py  export_flywire_surface.R  prepare_flywire_glomeruli.py
grabe-2015/: NOTES.md  README.md  al_atlas_napari.py
grabe-2015/data/: README.md
grabe-2016/: NOTES.md  README.md  al_atlas_napari.py
hemibrain/: README.md  hemibrain_napari.py
hemibrain/scripts/: export_hemibrain_surface.R
jrc2018unisex/: README.md  jrc2018unisex_napari.py
laissue-1999/: README.md
potter-task-2022/: README.md  potter_task_napari.py
reference-tables/: README.md  glomerulus_ground_truth.csv  glomerulus_name_reconciliation.csv
reference-tables/scripts/: build_glomerulus_ground_truth.py
scripts/: natverse_al_napari.py  regenerate_visual_data.py  ui_helpers.py  volume_helpers.py  write_coordinate_validation.py
vfb/: README.md  vfb_napari.py
vfb/scripts/: download_fbbt_glomerulus_terms.py
(+138 files in other folders)
